--- a/src/pages/Contribute/styles.module.scss
+++ b/src/pages/Contribute/styles.module.scss
@@ -50,14 +50,12 @@
 
 .hero_bg {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  width: auto;
-  height: auto;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+  object-position: center;
   z-index: 0;
   will-change: transform;
   opacity: 1;
