--- a/src/components/2.0/KitCard/styles.module.scss
+++ b/src/components/2.0/KitCard/styles.module.scss
@@ -296,6 +296,11 @@
   font-weight: 600;
 }
 
+.deprecatedDate {
+  color: #ef4444 !important;
+  font-weight: 600;
+}
+
 @keyframes pulse {
   0%, 100% {
     transform: scale(1);
