feat: update industry and dataspace pages for improved filtering and navigation; refactor icons and enhance styles for responsiveness

--- a/src/scss/components/HomePageHeader.module.scss
+++ b/src/scss/components/HomePageHeader.module.scss
@@ -130,7 +130,7 @@
   
   @media screen and (min-width: 2200px) {
     .heroBanner {
-      width: 70vw;
+      width: 100%;
       margin: auto;
       display: flex;
     }
@@ -139,7 +139,7 @@
   
   @media screen and (min-width: 3200px) {
     .heroBanner {
-      width: 60vw;
+      width: 100%;
       margin: auto;
       display: flex;
     }
