--- a/src/components/2.0/KitCategoryCard/styles.module.scss
+++ b/src/components/2.0/KitCategoryCard/styles.module.scss
@@ -50,13 +50,13 @@
   }
 
   &.primary {
-    --accent-color: #00b8d4;
-    --accent-color-light: #00e5ff;
+    --accent-color: #404040;
+    --accent-color-light: #595959;
   }
 
   &.secondary {
-    --accent-color: #7c4dff;
-    --accent-color-light: #b388ff;
+    --accent-color: #0070C0;
+    --accent-color-light: #0070C0;
   }
 
   &.tertiary {
