--- a/src/components/2.0/FilteredKitsGallery/styles.module.scss
+++ b/src/components/2.0/FilteredKitsGallery/styles.module.scss
@@ -341,6 +341,24 @@
   font-weight: 500;
 }
 
+/* No Results Message */
+.no_results {
+  text-align: center;
+  padding: 4rem 2rem;
+  color: var(--ifm-color-content-secondary);
+  
+  p {
+    margin: 0.5rem 0;
+    font-size: 1.1rem;
+    
+    &:first-child {
+      font-size: 1.3rem;
+      font-weight: 600;
+      color: var(--ifm-color-content);
+    }
+  }
+}
+
 /* Grid Container */
 .grid_container {
   max-width: 1200px;
