--- a/src/components/2.0/GetStartedSection/styles.module.scss
+++ b/src/components/2.0/GetStartedSection/styles.module.scss
@@ -17,4 +17,4 @@
  * SPDX-License-Identifier: Apache-2.0
  ********************************************************************************/
 
-@use '../../pages/Contribute/styles.module.scss';
+@use '../../../pages/Contribute/styles.module.scss';
